# DeepQZip

./: README.md
c++/: CMakeLists.txt  Makefile  arithmatic_coder.h  cmake_install.cmake  main.cpp  men.h
python/: dumpModel.py  extract_bq.py  models.py  models_cpp.py  run_experiments.sh  trainer.py
